manifests/production/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: execution-mode-app
  labels:
    app.kubernetes.io/name: execution-mode-app
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: execution-mode
    app.kubernetes.io/part-of: presentation-layer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: execution-mode-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: execution-mode-app
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/component: execution-mode
        app.kubernetes.io/part-of: presentation-layer
    spec:
      containers:
        - name: execution-mode-app
          image: 904333181156.dkr.ecr.sa-east-1.amazonaws.com/execution-mode:$ECR_TAG
          ports:
            - containerPort: 8080
