manifests/production/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: execution-mode-app
  labels:
    app.kubernetes.io/name: execution-mode-app
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: execution-mode
    app.kubernetes.io/part-of: execution-mode-layer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.develop.getbud.co`)
      kind: Rule
      services:
        - name: execution-mode-app
          port: 80
  tls:
    certResolver: letsencrypt
    options: {}
